// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Amend Payment page Component should render PaymentPageAmend 1`] = `
<div>
  <div
    data-testid="PaymentPageAmend"
  />
</div>
`;

exports[`Amend Payment page getLayout should wrap page with PaymentLayout and ErrorBoundary 1`] = `
<div>
  <div
    data-testid="PaymentLayout"
  >
    <div
      data-testid="ErrorBoundary"
    >
      <div
        data-testid="PaymentPageAmend"
      />
    </div>
  </div>
</div>
`;
